# locup

./: .gitignore  README.md
src/python/: run_memory.py
src/python/memory/: types.py
src/python/src/: run_memory.py
src/rust/concurrency/src/: lib.rs
src/rust/location/: Cargo.toml  README.md
src/rust/location/docs/: CustomStylesApi.md  CustomWebmapsApi.md  Error.md  ErrorError.md  SelfDescriptionApi.md  ServiceSelf.md  ServiceSelfLanguagesInner.md  ServiceSelfPlacesInner.md  ServiceSelfWorldviewsInner.md  StylesApi.md  StylesItemSelf.md  StylesSelf.md  WebmapItemSelf.md  WebmapsApi.md  WebmapsSelf.md
src/rust/location/src/: lib.rs
src/rust/location/src/apis/: configuration.rs  custom_styles_api.rs  custom_webmaps_api.rs  mod.rs  self_description_api.rs  styles_api.rs  webmaps_api.rs
src/rust/location/src/models/: error.rs  error_error.rs  mod.rs  service_self.rs  service_self_languages_inner.rs  service_self_places_inner.rs  service_self_worldviews_inner.rs  styles_item_self.rs  styles_self.rs  webmap_item_self.rs  webmaps_self.rs
src/rust/memory/src/: lib.rs
src/rust/places/: Cargo.toml
src/rust/places-from-scratch/: Cargo.toml
src/rust/places-from-scratch/src/: main.rs
src/rust/places/src/: lib.rs
